# papers-feed

./: .gitignore  README.md  papersfeed.css  papersfeed.js  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: 1_update_and_enrich.yml  2_deploy-frontend.yml  build-extension.yml  deduplicate-ghstore.yml  ghstore-process-bulk.yml  llamero-summarize.yaml
extension/: background.ts  content.ts  manifest.json  options.html  options.ts  package.json  popup.html  popup.ts  rollup.config.js  tsconfig.json
extension/config/: session.ts  types.ts
extension/papers/: debug.d.ts  manager.ts  types.ts
extension/source-integration/: base-source.ts  index.ts  link-processor.ts  metadata-extractor.ts  registry.ts  source-manager.ts  types.ts
extension/source-integration/arxiv/: index.ts
extension/source-integration/misc/: index.ts
extension/source-integration/nature/: index.ts
extension/source-integration/openreview/: index.ts
extension/source-integration/pnas/: index.ts
extension/utils/: logger.ts  popup-manager.ts  session-service.ts
frontend/: index.html
scripts/: hydrate_metadata.py  process_pdf.py  tei2md.xslt
